format css and fix link color contrast

--- a/docs/css/syntax.css
+++ b/docs/css/syntax.css
@@ -26,8 +26,10 @@
 }
 */
 
-.hljs, .language-plain {
-  color: #DCDCDC;  /* default color */
+.hljs,
+.language-plain {
+  color: #DCDCDC;
+  /* default color */
 }
 
 /* dark theme */
